# MyRenderer

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
dependencies/: fisqrt.cpp  fisqrt.h  tgaimage.cpp  tgaimage.h
src/: geometry.cpp  geometry.h  main.cpp  model.cpp  model.h
